fix(ui): add miss prefix to `$rd-enable-gap`

--- a/packages/ui/src/styles/_variables.scss
+++ b/packages/ui/src/styles/_variables.scss
@@ -19,4 +19,4 @@ $rd-placeholder-disabled-color: rgb(var(--#{$rd-prefix}text-color-rgb) / 8%) !de
 
 $rd-font-weight-bold: 600 !default;
 
-$enable-gap: false !default;
+$rd-enable-gap: false !default;
